--- a/workshop-api/workshop-api.csproj
+++ b/workshop-api/workshop-api.csproj
@@ -6,11 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.0.7" />
 	<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.0.7" />
 	<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUi" Version="6.0.7" />
   </ItemGroup>
-
+  
   <ItemGroup>
     <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj" />
   </ItemGroup>
